--- a/src/Header.css
+++ b/src/Header.css
@@ -1,20 +1,32 @@
-.header{
+.header {
+    display: flex;
+}
+
+.header__left {
+    display: flex;
 
 }
 
-.header__left{
-
-}
-
-.header__left > img {
+.header__left>img {
     object-fit: contain;
     height: 40px;
 }
 
 .header__right {
-
+    
 }
 
 .header__search {
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    height: 22px;
+    color: gray;
+}
 
+.header__search > input {
+    outline: none;
+    border: none;
+    background: none;
 }
