--- a/src/Header.css
+++ b/src/Header.css
@@ -1,5 +1,13 @@
 .header {
     display: flex;
+    justify-content: space-evenly;
+    border-bottom: 0.1px solid lightgray;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 100%;
+    position: sticky;
+    top: 0;
+    z-index: 999;
 }
 
 .header__left {
@@ -14,7 +22,8 @@
 }
 
 .header__right {
-
+    display: flex;
+    align-items: center;
 }
 
 .header__search {
