--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,4 +1,30 @@
 .sidebar{
     top: 80px;
     position: sticky;
+    height: fit-content;
+    flex: 0.2;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.sidebar__avatar {
+    margin-bottom: 10px;
+}
+.sidebar__top{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid lightgray;
+    border-bottom: 0;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    
+}
+
+.sidebar__stats{
+
+}
+
+.sidebar__bottom{
+
 }
