--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -18,7 +18,8 @@
     border-bottom: 0;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    
+    background-color: white;
+    padding-bottom: 10px;
 }
 
 .sidebar__stats{
