--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
-.app_body {
+.app{
+    background-color: #f3f2ef;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.app__body {
     display: flex;
 }
