--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,4 +1,4 @@
-.sidebar{
+.sidebar {
     top: 80px;
     position: sticky;
     height: fit-content;
@@ -10,7 +10,8 @@
 .sidebar__avatar {
     margin-bottom: 10px;
 }
-.sidebar__top{
+
+.sidebar__top {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -22,10 +23,15 @@
     padding-bottom: 10px;
 }
 
-.sidebar__stats{
-
+.sidebar__top>img {
+    width: 100%;
+    height: 60px;
+    margin-bottom: -20px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    object-fit: cover;
 }
 
-.sidebar__bottom{
+.sidebar__stats {}
 
-}
+.sidebar__bottom {}
