--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -32,6 +32,15 @@
     object-fit: cover;
 }
 
+.sidebar__stats{
+    padding: 10px;
+    margin-bottom: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: white;
+    border: 1px solid lightgray;
+}
+
 .sidebar__stat {
     margin-top: 10px;
     display: flex;
@@ -46,6 +55,7 @@
 
 .sidebar__statNumber{
     font-weight: 700;
+    color: #0a66c2 !important;
 }
 
 .sidebar__bottom {}
