--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -11,11 +11,11 @@
     margin-bottom: 10px;
 }
 
-.sidebar__top > h2{
+.sidebar__top>h2 {
     font-size: 18px;
 }
 
-.sidebar__top > h4{
+.sidebar__top>h4 {
     color: gray;
     font-size: 12px;
 }
@@ -41,7 +41,7 @@
     object-fit: cover;
 }
 
-.sidebar__stats{
+.sidebar__stats {
     padding: 10px;
     margin-bottom: 10px;
     border-bottom-left-radius: 10px;
@@ -62,7 +62,7 @@
     font-weight: 600;
 }
 
-.sidebar__statNumber{
+.sidebar__statNumber {
     font-weight: 700;
     color: #0a66c2 !important;
 }
@@ -74,4 +74,20 @@
     border: 1px solid lightgray;
     border-radius: 10px;
     margin-top: 10px;
+}
+
+.sidebar__recentItem {
+    display: flex;
+    font-size: 13px;
+    color: gray;
+    cursor: pointer;
+    margin-bottom: 5px;
+    padding: 5px;
+}
+
+.sidebar__recentItem:hover {
+    background-color: whitesmoke;
+    border-radius: 10px;
+    cursor: pointer;
+    color: black;
 }
