--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -76,6 +76,11 @@
     margin-top: 10px;
 }
 
+.sidebar__bottom>p {
+    font-size: 13px;
+    margin-bottom: 10px;
+}
+
 .sidebar__recentItem {
     display: flex;
     font-size: 13px;
@@ -90,4 +95,9 @@
     border-radius: 10px;
     cursor: pointer;
     color: black;
+}
+
+.sidebar__hash {
+    margin-left: 10px;
+    margin-right: 5px;
 }
