--- a/src/Feed.css
+++ b/src/Feed.css
@@ -1,3 +1,23 @@
 .feed{
     flex: 0.6;
+    margin: 0 20px;
+}
+
+.feed__inputContainer {
+    display: flex;
+    background-color: white;
+    padding: 10px;
+    padding-bottom: 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.feed__input {
+    border: 1px solid lightgray;
+    border-radius: 30px;
+    width: 100%;
+    display: flex;
+    padding: 10px;
+    color: gray;
+    padding-left: 15px;
 }
