--- a/src/Feed.css
+++ b/src/Feed.css
@@ -33,4 +33,9 @@
     margin-left: 10px;
     outline-width: 0;
     font-weight: 600;
+    outline: none;
+}
+
+.feed__input > form > button {
+    display: none;
 }
