--- a/src/Header.css
+++ b/src/Header.css
@@ -7,12 +7,12 @@
     width: 100%;
     position: sticky;
     top: 0;
+    background-color: white;
     z-index: 999;
 }
 
 .header__left {
     display: flex;
-
 }
 
 .header__left>img {
