--- a/src/Post.css
+++ b/src/Post.css
@@ -1,3 +1,25 @@
 .post{
-    
+    background-color: white;
+    padding: 15px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+}
+
+.post__header{
+    display: flex;
+    margin-bottom: 10px;
+    align-items: center;
+}
+
+.post__info{
+    margin-left: 10px;
+}
+
+.post__info > p{
+    font-size: 12px;
+    color: gray;
+}
+
+.post__body{
+    overflow-wrap: anywhere;
 }
