--- a/src/Login.css
+++ b/src/Login.css
@@ -13,3 +13,23 @@
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
+.login > form{
+    display: flex;
+    flex-direction: column;
+}
+
+.login > form >input {
+    width: 350px;
+    height: 50px;
+    font-size: 20px;
+    padding-left: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+
+.login > form > button {
+    width: 350px;
+    height: 50px;
+    font-size: large;
+}
