--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,9 @@
 }
 .app__body {
     display: flex;
-    margin-top: 5px;
+    margin-top: 35px;
     justify-content: space-evenly;
-    width: 100%;
+    max-width: 1200px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
