--- a/src/Login.css
+++ b/src/Login.css
@@ -1,10 +1,9 @@
 .login {
     display: grid;
     place-items: center;
-    padding-top: 100px;
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: 100px;
+    min-height: 100vh;
 }
 
 .login > img {
@@ -21,16 +20,17 @@
 
 .login > form >input {
     width: 350px;
-    height: 50px;
-    font-size: 20px;
+    height: 40px;
+    font-size: 14px;
     padding-left: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
+    outline: none;
 }
 
 .login > form > button {
     width: 365px;
-    height: 50px;
+    height: 40px;
     font-size: large;
     color: #fff;
     background-color: #0074b1;
