--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    min-height: 100vh;
 }
 .app__body {
     display: flex;
